--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Shiven Patel | Portfolio</title>
     <link rel="stylesheet" href="style.css?v=3">
     <!-- FontAwesome for Menu Icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
@@ -22,23 +22,24 @@
     <div class="logo-large">S.</div>
     
     <!-- Sidebar Navigation Toggle -->
-    <div class="menu-toggle" id="menu-toggle">
-        <i class="fa-solid fa-bars"></i>
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
     </div>
-    
-    <!-- Sidebar Navigation -->
-<nav id="sidebar-menu">
-    <span class="close-menu" id="close-menu">✖</span>
-    <ul>
-        <li><a href="index.html">Homepage</a></li>
-        <li><a href="education.html#education">Education</a></li>
-        <li><a href="education.html#experience">Professional Experience</a></li>
-        <li><a href="education.html#projects">Projects</a></li>
-        <li><a href="education.html#skills">Skills</a></li>
-        <li><a href="education.html#contact">Contact</a></li>
-    </ul>
-</nav>
 
+    <!-- Fullscreen Menu -->
+    <div id="fullscreen-menu">
+        <span class="close-menu" id="close-menu">✖</span>
+        <ul>
+           <ul>
+    <li><a href="education.html#about">About</a></li>
+    <li><a href="education.html#education">Education</a></li>
+    <li><a href="education.html#experience">Professional Experience</a></li>
+    <li><a href="education.html#projects">Projects</a></li>
+    <li><a href="education.html#skills">Skills</a></li>
+    <li><a href="education.html#contact">Contact</a></li>
+
+        </ul>
+    </div>
 
     <!-- Hero Section -->
     <section id="home">
