--- a/education.html
+++ b/education.html
@@ -164,7 +164,7 @@
             <p><i class="fas fa-envelope"></i> Email: <a href="mailto:shiven9019@gmail.com.">shiven9019@gmail.com</a></p>
             <p><i class="fas fa-map-marker-alt"></i> Location: Philadelphia, PA</p>
             <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Shiven14" target="_blank">Shiven14</a></p>
-            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/shiven-patel-903202244/" target="_blank">LinkedIn Profile</a></p>
+            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/shiven-patel-903202244/" target="_blank">shivenhpatel9019</a></p>
         </div>
          <!-- Resume Download Link -->
 <div class="resume-download">
